--- a/PÁGINA WEB/index.html
+++ b/PÁGINA WEB/index.html
@@ -78,7 +78,7 @@
 		<footer><hr>
 			<table align="center">
 				<tr>
-					<td class="footerLink"><a href="https://twitter.com/mustang_spain?lang=es"><img src="IMAGENES/FOOTER/Twitter.png" id="twitter">Twitter</a></td>
+					<td class="footerLink"><a href="https://twitter.com/mustang_spain?lang=es"><img src="IMAGENES/FOOTER/twitter.png" id="twitter">Twitter</a></td>
 					<td class="footerLink"><a href="https://www.facebook.com/fordmustang/?ref=py_c"><img src="IMAGENES/FOOTER/facebook.png" id="facebook">Facebook</a></td>
 					<td class="footerLink"><a href="PAGINAS/CONTACTANOS/contactanos.html">Contactanos</a></td>
 				</tr>
