--- a/PÁGINA WEB/PAGINAS/CATALOGO/PERFORMANCE/COCHE/MUSTANG/mustang.html
+++ b/PÁGINA WEB/PAGINAS/CATALOGO/PERFORMANCE/COCHE/MUSTANG/mustang.html
@@ -33,12 +33,12 @@
 		<!-- IMAGENES -->
 		<table>
 			<tr>
-				<td><img src="IMAGENES/Mustang1.jpg"></td>
-				<td><img src="IMAGENES/Mustang2.jpg"></td>
+				<td><img src="IMAGENES/MUSTANG.jpg"></td>
+				<td><img src="IMAGENES/MUSTANG2.jpg"></td>
 			</tr>
 			<tr>
-				<td><img src="IMAGENES/Mustang3.jpg"></td>
-				<td><img src="IMAGENES/Mustang4.jpg"></td>
+				<td><img src="IMAGENES/MUSTANG3.jpg"></td>
+				<td><img src="IMAGENES/MUSTANG4.jpg"></td>
 			</tr>
 		</table>
 
