--- a/PÁGINA WEB/index.html
+++ b/PÁGINA WEB/index.html
@@ -66,7 +66,7 @@
 					<td align="center" class="menu"><a href="PAGINAS/DISEÑO/diseño.html" target="ventana" class="linkIzquierda">DISEÑO</a></td>
 				</tr>
 				<tr>
-					<td align="center" class="menu"><a href="" target="ventana" class="linkIzquierda">HISTORIA</a></td>
+					<td align="center" class="menu"><a href="PAGINAS/HISTORIA/historia.html" target="ventana" class="linkIzquierda">HISTORIA</a></td>
 				</tr>
 			</table>
 
@@ -108,7 +108,7 @@
 		<footer><hr>
 			<table align="center">
 				<tr>
-					<td class="footerLink"><a href="https://twitter.com/mustang_spain?lang=es"><img src="IMAGENES/FOOTER/Twitter.png" id="twitter">Twitter</a></td>
+					<td class="footerLink"><a href="https://twitter.com/mustang_spain?lang=es"><img src="IMAGENES/FOOTER/twitter.png" id="twitter">Twitter</a></td>
 					<td class="footerLink"><a href="https://www.facebook.com/fordmustang/?ref=py_c"><img src="IMAGENES/FOOTER/facebook.png" id="facebook">Facebook</a></td>
 					<td class="footerLink"><a href="PAGINAS/CONTACTANOS/contactanos.html">Contactanos</a></td>
 				</tr>
